closDevOrg copy/force-app/main/default/objects/LOS_Workspace_Section__mdt/LOS_Workspace_Section__mdt.object-meta.xml
<CustomObject>
    <description>Future workspace layout configuration; component keys must be resolved by an allowlisted registry.</description>
    <label>LOS Workspace Section</label>
    <pluralLabel>LOS Workspace Section Records</pluralLabel>
</CustomObject>