closDevOrg copy/force-app/main/default/objects/LOS_Workspace_Section__mdt/fields/LOS_Component_Key__c.field-meta.xml
<CustomField>
    <fullName>LOS_Component_Key__c</fullName>
    <description>Component Key. See docs/data-dictionary.md for usage.</description>
    <label>Component Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>