closDevOrg copy/force-app/main/default/objects/LOS_Workspace_Section__mdt/fields/LOS_Stage__c.field-meta.xml
<CustomField>
    <fullName>LOS_Stage__c</fullName>
    <description>Stage. See docs/data-dictionary.md for usage.</description>
    <label>Stage</label>
    <referenceTo>LOS_Stage__mdt</referenceTo>
    <relationshipLabel>LOS Workspace Section Stage</relationshipLabel>
    <relationshipName>LOS_Workspace_Section_Stage</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>